# fintrack

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: ci.yml
client/: package-lock.json  package.json
client/src/: App.css  App.tsx  index.tsx  setupProxy.js
migrations/: 0001_initial.sql  0002_decimal_transaction_amount.sql  0003_transaction_timestamp_index.sql
src/: config.rs  cron.rs  db.rs  ext.rs  lib.rs  main.rs  migrations.rs  schema.sql  services.rs  state.rs  sync.rs  true_layer.rs  utils.rs
src/db/: accounts.rs  providers.rs  transactions.rs
src/services/: api.rs  connect.rs
static/templates/: index.html
true_layer/: Cargo.toml
true_layer/src/: lib.rs
