[package]
name = "fintrack"
version = "0.1.0"
authors = ["Hasan Ali <git@hasali.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
async-ctrlc = "1.2.0"
async-std = { version = "1.6.2", features = ["attributes"] }
async-sqlx-session = { version = "0.2.0", features = ["sqlite"] }
dotenv = "0.15.0"
serde = "1.0.114"
serde_json = "1.0.57"
sqlx = { version = "0.3.5", features = ["sqlite"] }
surf = "1.0.3"
tide = "0.13.0"
