[package]
name = "fintrack"
version = "0.1.0"
authors = ["Hasan Ali <git@hasali.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.3.0-beta.1"
actix-web = "3.0.0-beta.1"
anyhow = "1.0.32"
async-trait = "0.1.37"
chrono = "0.4.15"
cron = "0.6.1"
dotenv = "0.15.0"
femme = "2.1.1"
futures = "0.3.5"
log = "0.4.11"
reqwest = { version = "0.10.7", features = ["json"] }
serde = "1.0.115"
serde_json = "1.0.57"
sqlx = { version = "0.3.5", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio = { version = "0.2.22" }
