[package]
name = "fintrack"
version = "0.1.0"
authors = ["Hasan Ali <git@hasali.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]


[dependencies]
actix-files = "0.3.0-beta.1"
actix-web = "3.0.0-beta.3"
anyhow = "1.0.32"
async-trait = "0.1.38"
chrono = "0.4.15"
cron = "0.6.1"
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.3.5"
itoa = "0.4.6"
log = "0.4.11"
rust-embed = "5.6.0"
rust_decimal = { version = "1.7.0", features = ["serde-float"] }
serde = "1.0.115"
serde_json = "1.0.57"
tokio = { version = "0.2.22" }
true_layer = { path = "true_layer" }

[dependencies.sqlx]
version = "0.4.0-beta.1"
default-features = false
features = ["chrono", "decimal", "macros", "runtime-tokio", "postgres"]
