[package]
name = "true_layer"
version = "0.1.0"
authors = ["Hasan Ali <git@hasali.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.10", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
